# xyzmicroservices

./: .coverage  .dockerignore  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-overview.md  environment-variables.md  messaging-topology.md  testing-strategy.md
events/: order-created.schema.json
infra/cdk/: README.md  app.py  cdk.context.json  quickstart.sh  xyz_orders_stack.py
services/orders_service/: .dockerignore  Dockerfile
services/orders_service/app/: domain.py  main.py  publisher.py
services/orders_service/tests/integration/: test_api_publishes_order_created.py  test_publish_order_created.py
services/orders_service/tests/unit/: test_api.py  test_domain.py
tests/e2e/: test_order_to_payment_flow.py
xyz_microservices.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
