[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xyz-microservices"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pika>=1.3.0",
  "uvicorn>=0.27.0",
  "fastapi>=0.109.0",
  "pydantic>=2.7",
  "boto3>=1.34.0",
  "jsonschema>=4.22.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "tenacity>=9.0",
  "testcontainers[rabbitmq]>=4.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["services", "tests"]
addopts = "--cov=services --cov-report=term-missing --cov-report=xml --cov-fail-under=80 -q --disable-warnings --maxfail=1"
#addopts = "-q --disable-warnings --maxfail=1"

[tool.coverage.run]
branch = true
source = ["services"]
omit = [
  "*/tests/*",
  "*/__init__.py"
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

[tool.setuptools.packages.find]
include = ["services*", "references*"]
exclude = ["tests*", "docs*"]
